--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,15 @@ build/
 ### VS Code ###
 .vscode/
 
+### Logs ###
+log
+logs
+
+### Session ###
+session
+
 ### Config ###
 recaptcha.properties
 key.properties
+alimap.properties
 application-deploy.yml
