--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ server:
     threads:
       io: 2
   servlet:
-      charset: UTF-8
-      enabled: true
-      force: true
-        context-path: /
-        encoding:
+      context-path: /
+      encoding:
+        charset: UTF-8
+        enabled: true
+        force: true
       session:
         cookie:
           http-only: true
@@ -18,24 +18,23 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      druid:
-        initial-size: 5
-        min-idle: 5
-        max-active: 20
-        max-wait: 60000
-        time-between-eviction-runs-millis: 60000
-        min-evictable-idle-time-millis: 300000
-        validation-query: SELECT 1 FROM DUAL
-        test-while-idle: true
-        test-on-borrow: false
-        test-on-return: false
-        pool-prepared-statements: true
-        max-pool-prepared-statement-per-connection-size: 20
-        use-global-data-source-stat: true
-        connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-        filters:
-          commons-log.connection-logger-name: stat,wall,log4j
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1 FROM DUAL
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      use-global-data-source-stat: true
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+      filters: stat,wall,log4j
   jmx:
     default-domain: lognet
   mvc:
