--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ session
 ### Config ###
 recaptcha.properties
 key.properties
+shiro.properties
 czip.properties
 alimap.properties
 application-deploy.yml
