--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,8 @@ spring:
   cache:
     type: ehcache
     ehcache:
-      config: classpath:/ehcache.xml
+      config: classpath:/ehcache/common.xml
+
 logging:
   file:
     path: ./logs/lognet
