--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,7 @@ spring:
   cache:
     type: ehcache
     ehcache:
-      config: classpath:/ehcache/common.xml
+      config: classpath:/ehcache.xml
 
 logging:
   file:
