--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
-  undertow:
-    max-http-post-size: 2MB
+  tomcat:
+    uri-encoding: UTF-8
     threads:
-      io: 2
+      max: 300
+      min-spare: 10
+    accept-count: 800
   servlet:
       encoding:
         charset: UTF-8
